docs: add providers.md and configuration.md, document Bedrock provider